src/test/deca/context/invalid/provided/not-initialized-variable.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 13: Variable non declare:
// 

{
    int a;
    int b;
    a=b+c;
}
